--- a/src/style.css
+++ b/src/style.css
@@ -24,16 +24,13 @@ body
 }
 
 .container {
-    position: absolute;
-    left: 25%;
     z-index: 1;
     height: 100vh;
-    display: grid;
-    place-items: center;
+    text-align: center;
 }
 
 h1 {
-    font-size: 8rem;
+    font-size: 6rem;
     text-transform: uppercase;
     color: white;
 }
